// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableOfContents renders 1`] = `
<div
  className="wrapper"
  role="navigation"
>
  <div
    className="box marginBottom3 paddingX3"
  >
    <h3
      className="Heading fontSize400 defaultText alignStart breakWord"
    >
      Title
    </h3>
  </div>
  <ul
    className="flex flexColumn m0 p0"
  >
    <li
      className="noStyle marginTop1"
    >
      <a
        className="link noUnderline hideOutline tapTransition rounding0 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box default pill"
            style={
              Object {
                "width": 4,
              }
            }
          />
          <div
            className="item flexGrow itemPadding"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Label
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TableOfContents renders an accessibility label 1`] = `
<div
  aria-label="Page table of contents"
  className="wrapper"
  role="navigation"
>
  <div
    className="box marginBottom3 paddingX3"
  >
    <h3
      className="Heading fontSize400 defaultText alignStart breakWord"
    >
      Title
    </h3>
  </div>
  <ul
    className="flex flexColumn m0 p0"
  >
    <li
      className="noStyle marginTop1"
    >
      <a
        className="link noUnderline hideOutline tapTransition rounding0 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box default pill"
            style={
              Object {
                "width": 4,
              }
            }
          />
          <div
            className="item flexGrow itemPadding"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Label
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;
